EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Is_Overlapping__c.field-meta.xml
<CustomField>
    <fullName>Is_Overlapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the reservation being created is double booking the same room.</description>
    <label>Is Overlapping</label>
    <type>Checkbox</type>
</CustomField>