EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Nightly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Rate__c</fullName>
    <description>This is the nightly rate for the room.</description>
    <label>Nightly Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>