EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Includes requests and additional notes regarding the reservation.</description>
    <inlineHelpText>Add special requests and additional notes regarding the reservation.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>