EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Num_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Guests__c</fullName>
    <description>This is the numerical value of the Number of Guests. This can then be used to do counts.</description>
    <formula>VALUE(TEXT(Number_of_Guests__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>