EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <description>This determines the number of nights.</description>
    <formula>Check_out_Date__c - Check_in_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>