EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Room_Num_and_Contact__c.field-meta.xml
<CustomField>
    <fullName>Room_Num_and_Contact__c</fullName>
    <formula>Room__r.Name + &quot; - &quot; + Contact__r.FirstName + &quot; &quot; + Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Num and Contact</label>
    <type>Text</type>
</CustomField>