EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <description>A text version of the room name for displaying on the calendar.</description>
    <formula>Room__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Number</label>
    <type>Text</type>
</CustomField>