EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Number_of_Guests__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Standard Suite</fullName>
            </value>
            <value>
                <fullName>Junior Suite</fullName>
            </value>
            <value>
                <fullName>Presidential Suite</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>