EventForceManagementSystem/force-app/main/default/objects/Reservation__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Provides the total cost for the reservation.</description>
    <formula>Number_of_Nights__c * Nightly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>