EventForceManagementSystem/force-app/main/default/objects/Reservation__c/validationRules/Prevent_Double_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Double_Booking</fullName>
    <active>true</active>
    <description>Checks if a booking overlaps with an existing booking for the same room.</description>
    <errorConditionFormula>Is_Overlapping__c = TRUE</errorConditionFormula>
    <errorMessage>This room is already booked for the specified dates. Please select different dates or a different room.</errorMessage>
</ValidationRule>