EventForceManagementSystem/force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Room_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Check_in_Date__c</columns>
    <columns>Check_out_Date__c</columns>
    <columns>Number_of_Nights__c</columns>
    <columns>Number_of_Guests__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>